projects/examples/source/03.03.07.cpp
////////////////////////////////////////////////////////////////////

#include <iostream>
#include <utility>

////////////////////////////////////////////////////////////////////

class Entity
{
public :

	Entity(               ) { std::cout << "Entity::Entity (1)\n"; }

	Entity(const Entity & ) { std::cout << "Entity::Entity (2)\n"; }

	Entity(      Entity &&) { std::cout << "Entity::Entity (3)\n"; }
};

////////////////////////////////////////////////////////////////////

auto test_v1() 
{ 
	return Entity(); 
}

////////////////////////////////////////////////////////////////////

auto test_v2() 
{ 
	Entity entity;

//  ----------------------------------

//	return std::move(entity); // error

//  ----------------------------------
	
	return entity;
}

////////////////////////////////////////////////////////////////////

int main()
{
    [[maybe_unused]] auto entity_1 = test_v1();
	
	[[maybe_unused]] auto entity_2 = test_v2();
}

////////////////////////////////////////////////////////////////////